// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`argument completions > returns dry-run option for empty prefix 1`] = `
[
  {
    "description": "Preview without writing into the new model.json file",
    "label": "--dry-run",
    "value": "--dry-run",
  },
]
`;

exports[`argument completions > returns dry-run option for matching prefix 1`] = `
[
  {
    "description": "Preview without writing into the new model.json file",
    "label": "--dry-run",
    "value": "--dry-run",
  },
]
`;

exports[`command flow > does not update models.json and notifies error on full error 1`] = `
[
  {
    "message": "requesty-discover: Discovered 2 Requesty model(s).
Health check summary.
Full health check log: /tmp/pi-requesty-home/.pi/agent/requesty-health-check.log
models.json was not updated.",
    "type": "error",
  },
]
`;

exports[`command flow > emits notification and does not update models.json on dry-run 1`] = `
[
  {
    "message": "requesty-discover: running in dry mode, no changes will be done",
    "type": undefined,
  },
  {
    "message": "requesty-discover: Discovered 1 Requesty model(s).
models.json was not updated.",
    "type": "info",
  },
]
`;

exports[`command flow > notifies full error and clears status 1`] = `
[
  {
    "message": "requesty-discover: Discovery failed: models.json exploded",
    "type": "error",
  },
]
`;

exports[`command flow > notifies full error for sth not deriving from Error 1`] = `
[
  {
    "message": "requesty-discover: Discovery failed: this is not an error",
    "type": "error",
  },
]
`;

exports[`command flow > notifies full error on async rejections 1`] = `
[
  {
    "message": "requesty-discover: Discovery failed: requesty has a bad day trying to read its models",
    "type": "error",
  },
]
`;

exports[`command flow > sorts failing models deterministically for logging 1`] = `
[
  [
    [
      {
        "latencyMs": 123,
        "modelId": "requesty/failing-model-1",
        "ok": false,
      },
      {
        "latencyMs": 123,
        "modelId": "requesty/failing-model-2",
        "ok": false,
      },
      {
        "latencyMs": 123,
        "modelId": "requesty/failing-model-3",
        "ok": false,
      },
    ],
  ],
]
`;

exports[`command flow > sorts failing models deterministically for logging 2`] = `
[
  [
    {
      "apiKey": "test-key",
      "baseUrl": "https://router.requesty.ai/v1",
      "name": "Requesty",
    },
    [
      {
        "latencyMs": 123,
        "modelId": "requesty/failing-model-1",
        "ok": false,
      },
      {
        "latencyMs": 123,
        "modelId": "requesty/failing-model-2",
        "ok": false,
      },
      {
        "latencyMs": 123,
        "modelId": "requesty/failing-model-3",
        "ok": false,
      },
    ],
    {
      "health_check_log_path": "/tmp/pi-requesty-home/.pi/agent/requesty-health-check.log",
      "health_check_mode": "basic",
      "models_json_path": "/tmp/pi-requesty-home/.pi/agent/models.json",
      "provider_id": "requesty-export",
      "requesty_api_key": "ignore-me-plz",
    },
  ],
]
`;

exports[`command flow > sorts passing models deterministically for updating the models.json 1`] = `
[
  [
    {
      "providers": {
        "requesty-export": {
          "apiKey": "test-key",
          "baseUrl": "https://router.requesty.ai/v1",
          "models": [],
          "name": "Requesty",
        },
      },
    },
    [
      {
        "contextWindow": 128000,
        "cost": {
          "cacheRead": 3,
          "cacheWrite": 4,
          "input": 1,
          "output": 2,
        },
        "id": "requesty/passing-model-1",
        "input": [
          "text",
        ],
        "maxTokens": 4096,
        "name": "Requesty Model",
        "reasoning": false,
      },
      {
        "contextWindow": 128000,
        "cost": {
          "cacheRead": 3,
          "cacheWrite": 4,
          "input": 1,
          "output": 2,
        },
        "id": "requesty/passing-model-2",
        "input": [
          "text",
        ],
        "maxTokens": 4096,
        "name": "Requesty Model",
        "reasoning": false,
      },
      {
        "contextWindow": 128000,
        "cost": {
          "cacheRead": 3,
          "cacheWrite": 4,
          "input": 1,
          "output": 2,
        },
        "id": "requesty/passing-model-3",
        "input": [
          "text",
        ],
        "maxTokens": 4096,
        "name": "Requesty Model",
        "reasoning": false,
      },
    ],
    {
      "health_check_log_path": "/tmp/pi-requesty-home/.pi/agent/requesty-health-check.log",
      "health_check_mode": "basic",
      "models_json_path": "/tmp/pi-requesty-home/.pi/agent/models.json",
      "provider_id": "requesty-export",
      "requesty_api_key": "ignore-me-plz",
    },
  ],
]
`;

exports[`command flow > updates models.json and notifies info on no failures 1`] = `
[
  {
    "message": "requesty-discover: Discovered 2 Requesty model(s).
Health check summary.
Full health check log: /tmp/pi-requesty-home/.pi/agent/requesty-health-check.log
Run /reload to use models.json changes.",
    "type": "info",
  },
]
`;

exports[`command flow > updates passing models and notifies warning on partial failures 1`] = `
[
  {
    "message": "requesty-discover: Discovered 2 Requesty model(s).
Health check summary.
Full health check log: /tmp/pi-requesty-home/.pi/agent/requesty-health-check.log
Run /reload to use models.json changes.",
    "type": "warning",
  },
]
`;
